<resources>
    <string name="app_name">implicit intent</string>
    <string name="phone">Phone Number</string>
    <string name="call_btn">Call</string>
    <string name="welcome">Welcome</string>
    <string name="rectangle_btn">Rectangle</string>
    <string name="triangle">Triangle</string>
    <string name="rect_calaulate">Calculate</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="tri_hieght_et">Hieght</string>
    <string name="tri_base_et">Base</string>
    <string name="calculate">Calculate</string>
</resources>